--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </ul>
       </div>
     </header>
-
     <main class="main">
       <section class="hero section">
         <div class="container hero-flex">
@@ -57,24 +56,44 @@
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="features-list list-reset">
             <li class="features-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -176,6 +195,39 @@
           </ul>
         </div>
       </section>
+      <section class="section">
+        <div class="container customers-flex">
+          <h2 class="regular-customers-title">Постійні клієнти</h2>
+          <ul class="regular-customers list-reset">
+            <li class="regular-customer-item">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-yago"></use>
+              </svg>
+            </li>
+            <li class="regular-customer-item">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-companytlh"></use>
+              </svg>
+            </li>
+            <li class="regular-customer-item">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-fosterpeters"></use>
+              </svg>
+            </li>
+            <li class="regular-customer-item">
+              <svg width="106" height="60"><use href="./images/icons.svg#icon-company"></use></svg>
+            </li>
+            <li class="regular-customer-item">
+              <svg width="106" height="60"><use href="./images/icons.svg#icon-brand"></use></svg>
+            </li>
+            <li class="regular-customer-item">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-companytl"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer-flex">
@@ -198,6 +250,20 @@
             </li>
             <li class="address-item">
               <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <svg></svg>
+            </li>
+            <li>
+              <svg></svg>
+            </li>
+            <li>
+              <svg></svg>
+            </li>
+            <li>
+              <svg></svg>
             </li>
           </ul>
         </address>
