--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
         </nav>
         <ul class="contacts list-reset">
           <li class="contact-list">
+            <svg width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
             <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-list">
+            <svg width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
             <a class="contact-link" href="tel:+380961111111">+38096 111 11 11</a>
           </li>
         </ul>
@@ -152,6 +158,38 @@
                 <h3 class="ourteam-name">Ігор Дем'яненко</h3>
                 <p class="ourteam-text" lang="en">Product Designer</p>
               </div>
+              <div class="team-social">
+                <ul class="team-social-list list-reset">
+                  <li class="team-social-link">
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="ourteam-item">
               <img
@@ -164,6 +202,38 @@
               <div class="card-text-position">
                 <h3 class="ourteam-name">Ольга Рєпіна</h3>
                 <p class="ourteam-text" lang="en">Frontend Developerr</p>
+              </div>
+              <div class="team-social">
+                <ul class="team-social-list list-reset">
+                  <li class="team-social-link">
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -178,6 +248,38 @@
                 <h3 class="ourteam-name">Микола Тарасов</h3>
                 <p class="ourteam-text" lang="en">Marketing</p>
               </div>
+              <div class="team-social">
+                <ul class="team-social-list list-reset">
+                  <li class="team-social-link">
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="ourteam-item">
               <img
@@ -191,6 +293,38 @@
                 <h3 class="ourteam-name">Михайло Єрмаков</h3>
                 <p class="ourteam-text" lang="en">UI Designer</p>
               </div>
+              <div class="team-social">
+                <ul class="team-social-list list-reset">
+                  <li class="team-social-link">
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="team-link">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -200,6 +334,7 @@
           <h2 class="regular-customers-title">Постійні клієнти</h2>
           <ul class="regular-customers list-reset">
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link"></a>
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-yago"></use>
               </svg>
@@ -230,43 +365,56 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-flex">
-        <a class="logo-f" href="./index.html">
-          <span class="logo-web">Web</span><span class="logo-studio-f">Studio</span></a
-        >
-        <address class="address">
-          <ul class="address-list list-reset">
-            <li class="address-item">
-              <a
-                class="address-link"
-                href="https://goo.gl/maps/TEvmrjmiFiPLDedQ6"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                ><span class="maps-location">м.Київ, пр-т Лесі Українки, 26</span></a
-              >
+      <div class="container container-position">
+        <div class="container footer-flex">
+          <a class="logo-f" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio-f">Studio</span></a
+          >
+          <address class="address">
+            <ul class="address-list list-reset">
+              <li class="address-item">
+                <a
+                  class="address-link"
+                  href="https://goo.gl/maps/TEvmrjmiFiPLDedQ6"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><span class="maps-location">м.Київ, пр-т Лесі Українки, 26</span></a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="container social">
+          <h2 class="social-title">приєднуйтесь</h2>
+          <ul class="social-links list-reset">
+            <li>
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
             </li>
-            <li class="address-item">
-              <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+            <li>
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
             </li>
-            <li class="address-item">
-              <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li>
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
             </li>
           </ul>
-          <ul>
-            <li>
-              <svg></svg>
-            </li>
-            <li>
-              <svg></svg>
-            </li>
-            <li>
-              <svg></svg>
-            </li>
-            <li>
-              <svg></svg>
-            </li>
-          </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
