add tag <a> and gardient

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="hero section">
+      <section class="hero">
         <div class="container hero-flex">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
@@ -334,30 +334,41 @@
           <h2 class="regular-customers-title">Постійні клієнти</h2>
           <ul class="regular-customers list-reset">
             <li class="regular-customer-item">
-              <a href="#" class="regular-customer-link"></a>
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-yago"></use>
-              </svg>
+              <a href="#" class="regular-customer-link">
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#icon-yago"></use>
+                </svg>
+              </a>
             </li>
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-companytlh"></use>
               </svg>
+              </a>
             </li>
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-fosterpeters"></use>
               </svg>
+              </a>
             </li>
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link">
               <svg width="106" height="60"><use href="./images/icons.svg#icon-company"></use></svg>
+              </a>
             </li>
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link">
               <svg width="106" height="60"><use href="./images/icons.svg#icon-brand"></use></svg>
+              </a>
             </li>
             <li class="regular-customer-item">
+              <a href="#" class="regular-customer-link">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-companytl"></use>
+                </a>
               </svg>
             </li>
           </ul>
@@ -390,28 +401,36 @@
             </ul>
           </address>
         </div>
-        <div class="container social">
+        <div class="container social-footer">
           <h2 class="social-title">приєднуйтесь</h2>
-          <ul class="social-links list-reset">
+          <ul class="social-footer-links list-reset">
             <li>
+              <a href="#"></a>
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
+              </a>
             </li>
             <li>
+              <a href="#"></a>
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
+              </a>
             </li>
             <li>
+              <a href="#">
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
+              </a>
             </li>
             <li>
+              <a href="#"></a>
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
