--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container container-position">
+      <div class="container parrent-position">
         <div class="container footer-flex">
           <a class="logo-f" href="./index.html">
             <span class="logo-web">Web</span><span class="logo-studio-f">Studio</span></a
@@ -402,31 +402,31 @@
           </address>
         </div>
         <div class="container social-footer">
-          <h2 class="social-title">приєднуйтесь</h2>
-          <ul class="social-footer-links list-reset">
+          <span class="social-title">приєднуйтесь</span>
+          <ul class="social-footer-list list-reset">
             <li>
-              <a href="#"></a>
+              <a class="social-footer-link" href="#">
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
               </a>
             </li>
             <li>
-              <a href="#"></a>
+              <a class="social-footer-link" href="#">
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="social-footer-link" href="#">
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
               </a>
             </li>
             <li>
-              <a href="#"></a>
+              <a class="social-footer-link" href="#">
               <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
