--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
         </nav>
         <ul class="contacts list-reset">
           <li class="contact-list">
-            <svg width="16" height="12">
+            <a class="contact-link" href="mailto:info@devstudio.com"> <svg width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </svg>info@devstudio.com</a>
           </li>
           <li class="contact-list">
-            <svg width="10" height="16">
+            <a class="contact-link" href="tel:+380961111111">  <svg width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            <a class="contact-link" href="tel:+380961111111">+38096 111 11 11</a>
+            </svg>+38096 111 11 11</a>
           </li>
         </ul>
       </div>
