--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,18 @@
         </nav>
         <ul class="contacts list-reset">
           <li class="contact-list">
-            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-list">
-            <a class="contact-link" href="tel:+380961111111">+38096 111 11 11</a>
+            <a class="contact-link" href="tel:+380961111111">
+              <svg width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -71,130 +79,148 @@
           </ul>
 
           <ul class="portfolio-list list-reset">
-            <li class="project-item">
-              <img
-                class="portfolio-img"
-                src="./images/laptop.jpg"
-                alt="Ноутбук з відкритим сайтом"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/laptop.jpg"
+                  alt="Ноутбук з відкритим сайтом"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/peopleplaybasketball.jpg"
-                alt="Люди грають в баскебол"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/peopleplaybasketball.jpg"
+                  alt="Люди грають в баскебол"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/namerestoran.jpg"
-                alt="Фото назви ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/namerestoran.jpg"
+                  alt="Фото назви ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/headphone.jpg"
-                alt="Навушники"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Проєкт Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/headphone.jpg"
+                  alt="Навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/box.jpg"
-                alt="Фото двох коробок"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/box.jpg"
+                  alt="Фото двох коробок"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/screen.jpg"
-                alt="Фото сайта на екрані"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/screen.jpg"
+                  alt="Фото сайта на екрані"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/magazine.jpg"
-                alt="Віритий журнал з картинками"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/magazine.jpg"
+                  alt="Віритий журнал з картинками"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Видання Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/tag.jpg"
-                alt="Фото бірки з назвою проекта"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/tag.jpg"
+                  alt="Фото бірки з назвою проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
-            <li>
-              <img
-                class="portfolio-img"
-                src="./images/workonlaptop.jpg"
-                alt="Фото рук які працюють за ноутбуком"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-text-positions">
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="#">
+                <img
+                  class="portfolio-img"
+                  src="./images/workonlaptop.jpg"
+                  alt="Фото рук які працюють за ноутбуком"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-text-positions">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
