--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="customers section">
         <div class="container customers-flex">
           <h2 class="regular-customers-title">Постійні клієнти</h2>
           <ul class="regular-customers list-reset">
