--- a/portfolio.html
+++ b/portfolio.html
@@ -227,29 +227,64 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-flex">
-        <a class="logo-f" href="./index.html">
-          <span class="logo-web">Web</span><span class="logo-studio-f">Studio</span>
-        </a>
-        <address class="address">
-          <ul class="address-list list-reset">
-            <li class="address-item">
-              <a
-                class="address-link"
-                href="https://goo.gl/maps/TEvmrjmiFiPLDedQ6"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                ><span class="maps-location">м.Київ, пр-т Лесі Українки, 26</span></a
-              >
+      <div class="container parrent-position">
+        <div class="container footer-flex">
+          <a class="logo-f" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio-f">Studio</span>
+          </a>
+          <address class="address">
+            <ul class="address-list list-reset">
+              <li class="address-item">
+                <a
+                  class="address-link"
+                  href="https://goo.gl/maps/TEvmrjmiFiPLDedQ6"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><span class="maps-location">м.Київ, пр-т Лесі Українки, 26</span></a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="container social-footer">
+          <span class="social-title">приєднуйтесь</span>
+          <ul class="social-footer-list list-reset">
+            <li>
+              <a class="social-footer-link" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com </a>
+            <li>
+              <a class="social-footer-link" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li>
+              <a class="social-footer-link" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-footer-link" href="#">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
