--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <nav class="site-nav">
           <ul class="menu list-reset">
             <li class="menu-list">
-              <a class="menu-link" href="#"> Студія </a>
+              <a class="menu-link current" href="#"> Студія </a>
             </li>
             <li class="menu-list">
-              <a class="menu-link" href="./portfolio.html"> Портфоліо </a>
+              <a class="menu-link " href="./portfolio.html"> Портфоліо </a>
             </li>
             <li class="menu-list">
               <a class="menu-link" href="#"> Контакти </a>
