--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a class="menu-link current" href="#"> Студія </a>
             </li>
             <li class="menu-list">
-              <a class="menu-link " href="./portfolio.html"> Портфоліо </a>
+              <a class="menu-link" href="./portfolio.html"> Портфоліо </a>
             </li>
             <li class="menu-list">
               <a class="menu-link" href="#"> Контакти </a>
@@ -36,14 +36,18 @@
         </nav>
         <ul class="contacts list-reset">
           <li class="contact-list">
-            <a class="contact-link" href="mailto:info@devstudio.com"> <svg width="16" height="12">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>info@devstudio.com</a>
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-list">
-            <a class="contact-link" href="tel:+380961111111">  <svg width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>+38096 111 11 11</a>
+            <a class="contact-link" href="tel:+380961111111">
+              <svg width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -340,34 +344,36 @@
             </li>
             <li class="regular-customer-item">
               <a href="#" class="regular-customer-link">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-companytlh"></use>
-              </svg>
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#icon-companytlh"></use>
+                </svg>
               </a>
             </li>
             <li class="regular-customer-item">
               <a href="#" class="regular-customer-link">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-fosterpeters"></use>
-              </svg>
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#icon-fosterpeters"></use>
+                </svg>
               </a>
             </li>
             <li class="regular-customer-item">
               <a href="#" class="regular-customer-link">
-              <svg width="106" height="60"><use href="./images/icons.svg#icon-company"></use></svg>
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
               </a>
             </li>
             <li class="regular-customer-item">
               <a href="#" class="regular-customer-link">
-              <svg width="106" height="60"><use href="./images/icons.svg#icon-brand"></use></svg>
+                <svg width="106" height="60"><use href="./images/icons.svg#icon-brand"></use></svg>
               </a>
             </li>
             <li class="regular-customer-item">
               <a href="#" class="regular-customer-link">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-companytl"></use>
-                </a>
-              </svg>
+                <svg width="106" height="60">
+                  <use href="./images/icons.svg#icon-companytl"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -404,30 +410,30 @@
           <ul class="social-footer-list list-reset">
             <li>
               <a class="social-footer-link" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a class="social-footer-link" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a class="social-footer-link" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a class="social-footer-link" href="#">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </a>
             </li>
           </ul>
